--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <center>About the Workshop
             </h2>
             <p>Date: November 29, 2024 </p>
-            <p>Format - Online presentation via ZOOM </p>
+           <p>Format - Online presentation via <a href="https://uonewcastle.zoom.us/j/89234557125?pwd=sfUUWrmag4sh6dzk6qEilawi0czXbn.1" target="_blank">ZOOM</a></p>
             <p>Timing of presentation - twenty minutes followed by five minutes discussion and five minutes change over </p>
         </div>
         <div class="intro">
