--- a/index.html
+++ b/index.html
@@ -33,13 +33,9 @@
 </style>
 
 <body>
-    <header class="header">
-        <h3 style="color:	hsl(195, 10%, 50%)">
-            <center> International Workshop on
-        </h3>
-        <h1 style="color:rgb(600,150,20)">
-            <center> Mathematics of Sea Ice and Ice Sheets <br> (MOSSI) - 2024
-        </h1>
+   <header>
+        <h3 style="color: hsl(195, 100%, 60%);">International Workshop on</h3>
+        <h1>Mathematics of Sea Ice and Ice Sheets <br> (MOSSI) - 2024</h1>
     </header>
     <main>
         <div class="intro">
