--- a/index.html
+++ b/index.html
@@ -26,17 +26,14 @@
     </style>
 </head>
 
-<style>
-    h1 {
-        background-image: url('https://tse2-mm.cn.bing.net/th/id/OIP-C.BNosKmIFkYlsckzBL5T_1QHaFj?pid=ImgDet&rs=1');
-    }
-</style>
+
 
 <body>
-   <header>
-        <h3 style="color: hsl(195, 100%, 60%);">International Workshop on</h3>
-        <h1>Mathematics of Sea Ice and Ice Sheets <br> (MOSSI) - 2024</h1>
-    </header>
+<header style="text-align: center;">
+    <h3 style="color: hsl(195, 100%, 60%);">International Workshop on</h3>
+    <h1>Mathematics of Sea Ice and Ice Sheets <br> (MOSSI) - 2024</h1>
+</header>
+
     <main>
         <div class="intro">
             <h2 style="color:#0066FF">
@@ -44,7 +41,7 @@
             </h2>
             <p>Date: November 29, 2024 </p>
            <p>Format - Online presentation via <a href="https://uonewcastle.zoom.us/j/89234557125?pwd=sfUUWrmag4sh6dzk6qEilawi0czXbn.1" target="_blank">ZOOM</a></p>
-            <p>Timing of presentation - twenty minutes followed by five minutes discussion and five minutes change over </p>
+            <p>Presentation Time - twenty minutes followed by five minutes discussion and five minutes change over </p>
         </div>
         <div class="intro">
             <h2 style="color:#ADD8E6">
